# 3d-renderer

./: .gitignore  README.md
Rasterizer/: CMakeLists.txt  Version1.cpp  Version2.cpp  Version3.cpp  Version4.cpp  Version5.cpp
RayTracer/: CMakeLists.txt  TestModel.h  Version1.cpp  Version2.cpp  Version3.cpp  brute_force.py
RayTracer/tests/: generate_tests.py  run_tests.py  tests.cpp
